# faster-whisper-sample

./: pyproject.toml
src/: transcribe_mp3.py  whisper_utils.py
