[tool.poetry]
name = "voice-detection"
version = "0.1.0"
description = ""
authors = ["kaneplease <piacere.atsuki@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
faster-whisper = "^1.0.2"
sounddevice = "^0.4.6"
numpy = "^1.26.4"
pyaudio = "^0.2.14"
webrtcvad = "^2.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
